# tf2-wiki-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/tf2_wiki_mcp/: client.py  server.py
src/tf2_wiki_mcp/parsers/: infobox.py  weapon.py
src/tf2_wiki_mcp/tools/: generic.py  tf2.py
tests/: conftest.py  test_parsers.py  test_server_builds.py
tests/fixtures/: scattergun_infobox.txt
