[project]
name = "tf2-wiki-mcp"
version = "0.1.0"
description = "An MCP server that exposes the Team Fortress Wiki to LLM clients over stdio."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yusuf Afzal", email = "yusufafzal12@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "tf2", "team-fortress-2", "wiki", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "mwparserfromhell>=0.7.2",
]

[project.urls]
Homepage = "https://github.com/yusufaf/tf2-wiki-mcp"
Repository = "https://github.com/yusufaf/tf2-wiki-mcp"
Issues = "https://github.com/yusufaf/tf2-wiki-mcp/issues"

[project.scripts]
tf2-wiki-mcp = "tf2_wiki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "vcrpy>=8.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: hits the real TF2 wiki; skipped unless --live is passed",
]
